--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "@types/react": "18.2.42",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "multi-range-slider-react": "^2.0.7",
@@ -24,7 +25,6 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
